2014-12-30  Andrew Senkevich  <andrew.senkevich@intel.com>

	* sysdeps/i386/tls-macros.h: Include <features.h>.
	(TLS_LE): Use non-PIC version for GCC >= 5.0.
	(TLS_IE): Likewise.
	(TLS_LD): Likewise.
	(TLS_GD): Likewise.
	* sysdeps/unix/sysv/linux/i386/sysdep.h (check_consistency): Don't
	define for GCC >= 5.0.

2014-12-30  Chris Metcalf  <cmetcalf@ezchip.com>

	* math/test-fenv.c (test_single_exception, set_single_exc,
	feenv_nomask_test, feenv_mask_test, feexcp_nomask_test,
	feexcp_mask_test, feenable_test, fe_single_test): Add
	[!FE_ALL_EXCEPT] test so these routines are not compiled in the
	case where they are not used.
	* math/libm-test.inc: Likewise.
	* setjmp/test-setjmp-fp.c: Mark attribute ((unused)) on variable
	unused in the absence of FP rounding/exception support.
	* stdio-common/tst-printf-round.c: Likewise.
	* stdlib/tst-strtod-round.c: Likewise.
	* stdlib/tst-strtod-underflow.c: Likewise.

2014-12-30  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17723]
	* include/fenv.h (__feraiseexcept): Use libm_hidden_proto.
	* math/fraiseexcpt.c (__feraiseexcept): Use libm_hidden_def.
	* sysdeps/aarch64/fpu/fraiseexcpt.c (feraiseexcept): Rename to
	__feraiseexcept and define as weak alias of __feraiseexcept.  Use
	libm_hidden_weak.
	* sysdeps/arm/fraiseexcpt.c (feraiseexcept): Likewise.
	* sysdeps/hppa/fpu/fraiseexcpt.c (feraiseexcept): Likewise.
	* sysdeps/i386/fpu/fraiseexcpt.c (__feraiseexcept): Use
	libm_hidden_def.
	* sysdeps/ia64/fpu/fraiseexcpt.c (feraiseexcept): Rename to
	__feraiseexcept and define as weak alias of __feraiseexcept.  Use
	libm_hidden_weak.
	* sysdeps/m68k/coldfire/fpu/fraiseexcpt.c (feraiseexcept):
	Likewise.
	* sysdeps/microblaze/math_private.h (__feraiseexcept): New macro.
	* sysdeps/mips/fpu/fraiseexcpt.c (feraiseexcept): Rename to
	__feraiseexcept and define as weak alias of __feraiseexcept.  Use
	libm_hidden_weak.
	* sysdeps/powerpc/fpu/fraiseexcpt.c (__feraiseexcept): Use
	libm_hidden_def.