@@ -15,7 +15,8 @@ Version 2.21
   17522, 17555, 17570, 17571, 17572, 17573, 17574, 17581, 17582, 17583,
   17584, 17585, 17589, 17594, 17601, 17608, 17616, 17625, 17630, 17633,
   17634, 17647, 17653, 17657, 17664, 17665, 17668, 17682, 17717, 17719,
-  17722, 17723, 17724, 17725, 17732, 17733, 17744, 17745, 17746, 17747.
+  17722, 17723, 17724, 17725, 17732, 17733, 17744, 17745, 17746, 17747,
+  17775
 
 * i386 memcpy functions optimized with SSE2 unaligned load/store.
 
